--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://arupdawn.github.io/Resume",
+  "homepage": "https://arupdawn.github.io/resume-arup",
   "name": "Resume",
   "version": "0.1.0",
   "private": true,
