--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://arupdawn.github.io/resume-arup",
-  "name": "Resume",
+  "name": "resume",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
